--- a/manifests/brewz/virtual-server.yaml
+++ b/manifests/brewz/virtual-server.yaml
@@ -4,6 +4,8 @@ metadata:
   name: brewz
 spec:
   host: brewz.f5demo.com
+  tls:
+    secret: brewz-tls
   upstreams:
     - name: spa
       service: spa
